--- a/Diary of Jaadu Jinn.html
+++ b/Diary of Jaadu Jinn.html
@@ -1,7 +1,18 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-</head>     
+    <meta charset="UTF-8">
+    <meta name="viewport" 
+
+content="width=device-width, 
+
+initial-scale=1.0">
+    <meta http-equiv="X-UA-
+
+Compatible" content="ie=edge">
+    <title>Document</title>
+</head>
 <body>
-<a href="www.jujn.ml>Jaadu Jinn - Sabka Baaapu, Apna Baapu</a>
+    yeahhh
 </body>
 </html>
